# realsense-viz

./: .gitignore
3dscan/: CMakeLists.txt  main.cpp
3dscan/include/: opencv.hpp
viz/: CMakeLists.txt  Viz.cpp
